Crash on loading 2.79x-master file #57921

Closed
opened 2018-11-18 22:14:47 +01:00 by ¿? · 7 comments

Win7 64bit

Blender 2.8 d5c751012b (2018-11-18 01:32)

This file crashes on load.
All I can say otherwise is an explanation about it's creation: 2018-11-09.blend

My file links 3+3 groups from 2 characters from 2 other files (not included).
The Rigs are proxied then duplicated into a second scene for a second animation sequence.
The rigs are animated using additive NLA layers.

If I try to load after deleting one of the scenes, it still crashes.



 -- - - - - - -- - - - not directly related to this file/crash - - - - - - - -- - - - - - -

I use to link character via Scene link, then instance/collect the meshes I currently want into a "Characters" scene, then instance those into a "Background", and place that background scene as a Scene>>Background for my Main Animation Scene.

I stopped doing this months ago because when loading it into 2.8, it would always crash, making it far more cumbersome to get a 2.8-preview out of them.
Since this method "may" be more complicated than any intended usage for Blender and linking groups is supposedly the intended method for getting characters, I opted to only link Groups.
I was trying to see if NLA playback (without having an active action) was working yet because they're an important part of my animation process and that glitch is/was too much of an inconvenience in my workflow.

Win7 64bit Blender 2.8 d5c751012b3 (2018-11-18 01:32) This file crashes on load. All I can say otherwise is an explanation about it's creation: [2018-11-09.blend](https://archive.blender.org/developer/F5624636/2018-11-09.blend) My file links 3+3 groups from 2 characters from 2 other files (not included). The Rigs are proxied then duplicated into a second scene for a second animation sequence. The rigs are animated using additive NLA layers. If I try to load after deleting one of the scenes, it still crashes.   -- - - - - - -- - - - not directly related to this file/crash - - - - - - - -- - - - - - - I use to link character via Scene link, then instance/collect the meshes I currently want into a "Characters" scene, then instance those into a "Background", and place that background scene as a Scene>>Background for my Main Animation Scene. I stopped doing this months ago because when loading it into 2.8, it would always crash, making it far more cumbersome to get a 2.8-preview out of them. Since this method "may" be more complicated than any intended usage for Blender and linking groups is supposedly the intended method for getting characters, I opted to only link Groups. I was trying to see if NLA playback (without having an active action) was working yet because they're an important part of my animation process and that glitch is/was too much of an inconvenience in my workflow.
Author

Added subscriber: @Ebone

Added subscriber: @Ebone

Added subscriber: @mont29

Added subscriber: @mont29

We'll need the other (library) files as well…

We'll need the other (library) files as well…
Author

Crashes without them:
nsfw.zip

Crashes without them: [nsfw.zip](https://archive.blender.org/developer/F5638420/nsfw.zip)
Bastien Montagne self-assigned this 2018-11-20 21:47:33 +01:00

Thanks, indeed main file is enough here, since issue is not related to linking, crash happen when there are no renderlayers. Fix incomming.

Thanks, indeed main file is enough here, since issue is not related to linking, crash happen when there are no renderlayers. Fix incomming.

This issue was referenced by b7ee0912a7

This issue was referenced by b7ee0912a7776f444041f25b3103c6b30f4c771a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57921
No description provided.