Fix T57921: Crash when loading 2.7x .blend with scene without any render layer.

We need at least one view layer, always. :)